--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,11 +1,11 @@
 \input{preface.tex}
 
 \subsection*{\centering~Abstract}
-We present an analysis of a dataset acquired from an uncontrolled online user study including 264 participants, backed up by a controlled lab study consisting of ten test subjects. The dataset consists of data from three different tasks; a pointing task and two different navigation tasks, a tunnel and a spiral task. Using Akaike Information Criterion (AIC), and residual analysis, we compare four variations of Fitts' Law to see which is the best fit for the pointing tasks. It is found that Meyer's variation gives the best fit, with AIC-values ranging from 34.64 to 1781.96 less than other variations. We include a fifth variation of Fitts' Law adjusted specifically for the navigation tasks by Accot \& Zhai. Based upon an AIC-analysis we find that no variation describes our tunnel task best, while Accot \& Zhai describes our spiral task better than any of the other variations. Looking at the participants speed, velocity and navigational paths we look for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing.
+We present an analysis of a dataset acquired from an uncontrolled online user study including 264 participants, supported by a controlled lab study consisting of ten test subjects. The dataset consists of data from a pointing task and two different navigation tasks; a tunnel and a spiral task. Using Akaike Information Criterion (AIC), and residual analysis, we compare four variations of Fitts' Law to see which is the best fit for the pointing tasks. It is found that Meyer's variation gives the best fit, with AIC-values ranging from 34.64 to 1781.96 less than other variations. We include a fifth variation of Fitts' Law adjusted specifically for the navigation tasks by Accot \& Zhai. Based on an AIC-analysis we find that no variation describes the tunnel tasks best, while Accot \& Zhai describes the spiral tasks better than any of the other variations. Looking at the participants speed, velocity and navigational paths we search for signs of patterns that could lead to a better alternative for Fitts' law, but find no such thing.
 
 \subsection*{\centering~Resumé}
 
-Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, understøttet af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra tre forskellige opgaver; en pegeopgave, og to forskellige navigationsopgaver, en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyer's variation giver det bedste resultat, med en AIC-værdi i området fra 34.64 til 1781.96 mindre end de andre varianters. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Ved AIC-analyse finder vi, at ingen variant beskriver vores tunnelopgave bedst, mens Accot \& Zhai beskriver vores spiralopgave bedre end nogen af de andre varianter. Ved at se på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts' lov, finder vi ingen tegn på mønstre.
+Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online brugerstudie med 264 deltagere, understøttet af et kontrolleret laboratorieeksperiment bestående af ti forsøgspersoner. Datasættet består af data fra en pegeopgave, og to forskellige navigationsopgaver; en tunnel- og spiralopgave. Ved brug af Akaike Information Criterion (AIC), og residualanalyse sammenligner vi fire varianter af Fitts' lov for at se, hvilken der passer bedst på pegeopgaverne. Det konstateres, at Meyer's variation giver det bedste resultat, med en AIC-værdi fra 34.64 til 1781.96 mindre end de andre varianters. Vi inkluderer en femte variation af Fitts' lov tilpasset specifikt til navigationsopgaverne fra Accot \& Zhai. Ved AIC-analyse finder vi, at ingen variant beskriver tunnelopgaverne bedst, mens Accot \& Zhai beskriver spiralopgaverne bedre end nogen af de andre varianter. Vi ser på deltagernes fart, hastighed og baner efter tegn på mønstre, der kunne føre til et bedre alternativ for Fitts' lov, dog finder vi ingen tegn på sådanne mønstre.
 
 \addcontentsline{toc}{chapter}{Indledning}
 \chapter*{Indledning}
@@ -17,7 +17,7 @@ Vi præsenterer en analyse af et datasæt erhvervet fra et ukontrolleret online 
 	\label{fig:primepixels}
 \end{wrapfigure}
 
-Inden for menneske-datamaskine interaktion er Fitt's Lov udbredt som optimerings- og forbedringsværktøj ved design af brugergrænseflader. Loven bruges til at udregne tiden det tager at flytte markøren til et element, ud fra elementets størrelse og afstanden til det. Som noteret i \cite{karafillis2012}, kan Fitts' Lov bruges som en retningslinje når man designer brugergrænseflader - f.eks. ved at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt at have kendskab til "prime pixels", som er de pixels, der ligger i kanten og hjørnerne af skærmen, og som kan tilgås ved at flytte markøren til skærmens kant, hvor markøren automatisk stopper som ses på figur \ref{fig:primepixels}. Derudover er markørens nuværende position også en "prime pixel" som f.eks. kan tilgås ved at højreklikke med musen. Den nemme tilgængelighed af disse pixels gør, at de ofte bliver integreret som centrale dele af brugergrænsefladedesign. Eksempler på dette ses overalt i interaktionen med moderne styresystemer, hvor størstedelen af dem benytter sig af markørens nuværende position til at vise en menu, hvis brugeren højreklikker. Der er også en tendens til at styresystemers proceslinje bliver lagt langs øvre eller nedre kant af skærmen - igen på gund af den lette tilgængelighed af disse "prime pixels" for brugeren. Fleksibiliteten af Fitts' Lov ses ved den store variation af brugergrænseflader, hvor den kan bruges, blandt andet i drop-down menuer, som beskrevet af \cite{accot1997}. Brugen af Fitt's Lov i drop-down menuer ses på figur \ref{fig:dropdown}, hvor det illustreres at der for hvert trin i menuen vil være en pegeopgave, hvor Fitts' Lov kan benyttes.\\
+Inden for menneske-datamaskine interaktion er Fitts' lov udbredt som optimerings- og forbedringsværktøj ved design af brugergrænseflader. Loven bruges til at udregne tiden det tager at flytte markøren til et element, ud fra elementets størrelse og afstanden til det. Som noteret i \cite{karafillis2012}, kan Fitts' lov bruges som en retningslinje når man designer brugergrænseflader - f.eks. ved at finde størrelser og placeringer af knapper. Det er i den forbindelse vigtigt at have kendskab til "prime pixels", som er de pixels, der ligger i kanten og hjørnerne af skærmen. De kan tilgås ved at flytte markøren til skærmens kant, hvor markøren automatisk stopper, hvilket ses på figur \ref{fig:primepixels}. Derudover er markørens nuværende position også en "prime pixel", som for eksempel kan tilgås ved at højreklikke med musen. Den nemme tilgængelighed af disse pixels gør, at de ofte bliver integreret som centrale dele af brugergrænsefladedesign. Eksempler på dette ses overalt i interaktionen med moderne styresystemer, hvor størstedelen af dem benytter sig af markørens nuværende position til at vise en menu, hvis brugeren højreklikker. Der er også en tendens til at styresystemers proceslinje bliver lagt langs øvre eller nedre kant af skærmen - igen på grund af den lette tilgængelighed af disse "prime pixels". Fleksibiliteten af Fitts' lov ses ved den store variation af brugergrænseflader hvor den kan bruges, blandt andet i drop-down menuer, som beskrevet af \cite{accot1997}. Brugen af Fitts' lov i drop-down menuer ses på figur \ref{fig:dropdown}, hvor det illustreres, at der for hvert trin i menuen vil være en pegeopgave, hvor Fitts' lov kan benyttes.\\
 
 \begin{wrapfigure}{l}{.35\linewidth}
 	\centering
@@ -26,7 +26,7 @@ Inden for menneske-datamaskine interaktion er Fitt's Lov udbredt som optimerings
 	\label{fig:dropdown}
 \end{wrapfigure}
 
-Siden lanceringen af den første successfulde smartphone i 2007, er der sket en stigning i antallet af enheder, der har berøringsfølsomme skærme som den primære inputmetode. Med denne udvikling har der været et behov for at udvikle nye måder at interagere med systemerne på. De tendenser til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme, da de tre største mobilstyresystemer i dag, nemlig Android, iOS og Windows Phone alle benytter sig af navigationselementer, der ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications}, som viser, hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugerfladedesign, hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer, der bruges oftest. Med den stigende tendens til at skærmene på smartphones bliver størrere, vil der være et endnu større behov for at optimere brugerfladerne på disse enheder, så de er hurtige at benytte sig af.\\
+Med udviklingen af berøringsfølsomme skærme som primær inputmetode, har der været et behov for at udvikle nye måder at interagere med systemerne på. Tendenserne til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme, blandt andet benytter mobilstyresystemerne Android, iOS og Windows Phone sig alle af navigationselementer, som  ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications}, som viser, hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugerfladedesign, hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer, der bruges oftest. Med den stigende tendens til at skærmene på smartphones bliver størrere, vil der være et endnu større behov for at optimere brugerfladerne på disse enheder, så de er hurtige at benytte sig af.\\
 
 Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfølsomme skærme, er der dog stadig behov for mere dokumentation af at denne rent faktisk kan benyttes til touch-input. Der er i løbet af de sidste to år publiceret et antal artikler om Fitts' Lov, hvor forskere er begyndt at se på, om den også kan bruges til berøringsfølsomme skærme eller øjebevægelser \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessante områder at bruge Fitt's Lov på, er der stadig et stort behov for mere dokumentation, om hvorvidt Fitt's Lov, eller en af varianterne af den, rent faktisk kan benyttes til disse inputmetoder. Der danner sig dog et generelt billede af, hvordan Fitt's Lov stadig kan være interessant at skrive om, og forske i, i dag - selvom den blev introduceret i 1954.\\
 
