størrelser er dumme

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -26,7 +26,7 @@ Inden for menneske-datamaskine interaktion er Fitts' lov udbredt som optimerings
 	\label{fig:dropdown}
 \end{wrapfigure}
 
-Med udviklingen af berøringsfølsomme skærme som primær inputmetode, har der været et behov for at udvikle nye måder at interagere med systemerne på. Tendenserne til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme, blandt andet benytter mobilstyresystemerne Android, iOS og Windows Phone sig alle af navigationselementer, som  ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications}, som viser, hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugerfladedesign, hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer, der bruges oftest. Med den stigende tendens til at skærmene på smartphones bliver større, vil der være et endnu større behov for at optimere brugerfladerne på disse enheder, så de er hurtige at benytte sig af.\\
+Med udviklingen af berøringsfølsomme skærme som primær inputmetode, har der været et behov for at udvikle nye måder at interagere med systemerne på. Tendenserne til at benytte sig af "prime pixels" i brugerfladedesign på styresystemer går igen med berøringsfølsomme skærme. Blandt andet benytter mobilstyresystemerne Android, iOS og Windows Phone sig alle af navigationselementer, som  ligger i kanten af skærmen. Et eksempel på dette ses på figur \ref{fig:notifications}, som viser, hvordan man skal trække fingeren ned fra den øvre kant af skærmen for at tilgå de hurtige indstillinger, og se sine notifikationer. Dette er igen et godt eksempel på brugergrænsefladedesign, hvor der er taget højde for at tiden det tager at interagere med et element på skærmen skal være så kort som overhovedet muligt - især med de elementer, der bruges oftest. Ved disse berøringsfølsomme skærme, vil der være et behov for at optimere brugergrænsefladerne på disse enheder, så de er hurtige at benytte sig af.\\
 
 Selvom der ses et behov for at kunne benytte sig af Fitt's Lov på berøringsfølsomme skærme, er der dog stadig behov for mere dokumentation af at denne rent faktisk kan benyttes til touch-input. Der er i løbet af de sidste to år publiceret et antal artikler om Fitts' Lov, hvor forskere er begyndt at se på, om den også kan bruges til berøringsfølsomme skærme eller øjebevægelser \cite{hong2015} \cite{zhao2015} \cite{jiang2014} \cite{greene2014}. Mens dette er interessante områder at bruge Fitt's Lov på, er der stadig et stort behov for mere dokumentation, om hvorvidt Fitt's Lov, eller en af varianterne af den, rent faktisk kan benyttes til disse inputmetoder. Der danner sig dog et generelt billede af, hvordan Fitt's Lov stadig kan være interessant at skrive om, og forske i, i dag - selvom den blev introduceret i 1954.\\
 
