--- a/latex/main.tex
+++ b/latex/main.tex
@@ -41,7 +41,7 @@ Siden udgivelsen af Fitts' originale artikel, der beskrev hans forsøg og udledt
 
 I 1992 udgav Scott MacKenzie artiklen \cite{mackenzie1992}, hvori han beskrev en ny variant af Fitts' lov. Denne variant udviser samme form som Shannon's Sætning \cite{goldberg2015} og er siden blevet accepteret som den mest udbredte \cite{guiard2011}. MacKenzie udførte beregninger på data fra allerede udførte forsøg og viste, at hans formulering ville passe bedre på de tidligere indsamlede data. På trods af, at MacKenzie viste, at hans formulering passede bedre på data fra tidligere forsøg, har \cite{drewes2010} vist, at alle fire formuleringer ikke nødvendigvis passer til alle tilfælde af en opgaves sværhedsgrad. Dog noterer \cite{goldberg2015}, at MacKenzie's formulering generelt var bedst at bruge ved opgaver med både lave og høje sværhedsgrader.
 
-På trods af, at MacKenzie's variant er den mest udbredte, står det ofte forskere frit for at bruge den variant de finder bedst passende \cite{drewes2010}. Der bliver i forskellige artikler gjort brug af den variant af Fitts' lov, som passer den indsamlede data bedst. Dette fører til, at forskere skal retfærdiggøre deres valg af Fitts' lov, frem for at bruge tiden på deres egentlige forskningsområde \cite{drewes2010}. Der er behov for en standardmodel af Fitts' lov, da det vil gøre det nemmere for både forskere, undervisere og studerende inden for menneske-datamaskine interaktion.
+På trods af, at MacKenzie's variant er den mest udbredte, står det ofte forskere frit for at bruge den variant de finder bedst passende \cite{drewes2010}. Der bliver i forskellige artikler gjort brug af den variant af Fitts' lov, som passer den indsamlede data bedst. Dette fører til, at forskere skal retfærdiggøre deres valg af Fitts' lov, frem for at bruge tiden på deres egentlige forskningsområde \cite{drewes2010}. Der er behov for en standardmodel af Fitts' lov, da det vil gøre det nemmere for både forskere, undervisere og studerende inden for menneske-datamaskine interaktion.\newpage
 
 Det er generelt, inden for videnskabelige felter, vigtigt at reproducere og dokumentere tidligere udførte forsøg, da det hjælper med at se om et resultat kan genfindes og beskrive, hvor resultaterne holder vs. fejler. Det hjælper også med at fjerne studier, hvor resultaterne ikke kan valideres både under ens og lidt anderledes forhold\cite{hornbaek2014}. Det har inden for menneske-datamaskine interaktion i høj grad været normalt ikke at udføre genskabelse af forsøg. \cite{hornbaek2014} beskriver at kun $3\%$ af 891 artikler fra forskellige publikationer reproducerer tidligere eksperimenter. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion, hvilket Fitts' lov i høj grad kan siges at være.
 
