--- a/latex/main.tex
+++ b/latex/main.tex
@@ -45,7 +45,7 @@ På trods af, at MacKenzie's variant er den mest udbredte, står det ofte forske
 
 Det er generelt, inden for videnskabelige felter, vigtigt at reproducere og dokumentere tidligere udførte forsøg. Dette hjælper med at se om et resultat kan genfindes og beskrive situationer, hvor dette ikke er tilfældet. Det hjælper også med at fjerne undersøgelser, hvor resultaterne ikke kan valideres både under samme og ændrede forhold \cite{hornbaek2014}. Det har inden for menneske-datamaskine interaktion i høj grad været normalt ikke at genskabe forsøg. \cite{hornbaek2014} beskriver at kun $3\%$ af 891 artikler fra forskellige publikationer reproducerer tidligere eksperimenter. Denne mangel på reproducering af forsøg, er især relevant ved større opdagelser inden for menneske-datamaskine interaktion, hvilket Fitts' lov i høj grad kan siges at være.
 
-Vi vil i denne rapport udføre to forsøg, hvis formål er at indsamle data til en analyse af bevægelser, for at sammenligne forskellige varianter af Fitts' lov. Vores forsøg vil være en reproducering af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre data af høj kvalitet, som kan understøtte den indsamlede data fra vores onlineeksperiment. Vi vil i vores analyse både analysere dataen i forhold til de fire allerede omtalte variationer af Fitts' lov. Dertil vil vi analysere bevægelsesbaner, fart og hastighed, for at se om Fitts' lov kan optimeres.\\
+Vi vil i denne rapport udføre to forsøg, hvis formål er at indsamle data til en analyse af bevægelser, for at sammenligne forskellige varianter af Fitts' lov. Vores forsøg vil være en reproducering af forsøg udført af \cite{accot1997, goldberg2015}, og vil bestå af et kontrolleret laboratorieeksperiment, og et ukontrolleret onlineeksperiment. Det kontrollerede laboratorieeksperiment er medtaget for at sikre data af høj kvalitet, ved at sammenligne med data fra vores onlineeksperiment. Vi vil i vores analyse både analysere dataen i forhold til de fire allerede omtalte variationer af Fitts' lov. Dertil vil vi analysere bevægelsesbaner, fart og hastighed, for at se om Fitts' lov kan optimeres.\\
 
 \addcontentsline{toc}{section}{Forventninger til læseren}
 \section*{Forventninger til læseren}
