--- a/latex/main.tex
+++ b/latex/main.tex
@@ -59,7 +59,7 @@ I dette kapitel vil vi kigge nærmere på teorierne bag Fitts' lov. Vi vil førs
 \section*{Fitts' tre eksperimenter}
 Fitts var interesseret i at vise, at informationsteori kunne bruges til at beskrive det menneskelige motoriske system, og udførte derfor en række eksperimenter \cite{fitts1954}. Fitts udførte i alt tre eksperimenter - det første af dem dog med to forskellige pegeredskaber - hvilket gav anledning til data fra fire forskellige motoriske opgaver. Fitts arbejdede med de tre eksperimenter ud fra følgende hypotese, hvor $E$ kontrollerer den gennemsnitlige amplitude og varighed \cite{fitts1954} og $S$ er forsøgspersonen
 \begin{quotation}
-\textit{If the amplitude and tolerance limits of a task are controlled by E, and S is instructed to work at his maximum rate, then the average time per response will be directly proportional to the minimum average amount of information per response demanded by the particular conditions of amplitude and tolerance. \cite{fitts1954}}
+\textit{If the amplitude and tolerance limits of a task are controlled by E, and S is instructed to work at his maximum rate, then the average time per response will be directly proportional to the minimum average amount of information per response demanded by the particular conditions of amplitude and tolerance. \cite{fitts1954} side 263}
 \end{quotation}
 Vi vil i denne sektion se nærmere på de tre eksperimenter og Fitts' konklusioner.
 
