--- a/latex/main.tex
+++ b/latex/main.tex
@@ -59,7 +59,7 @@ I dette kapitel vil vi kigge nærmere på teorierne bag Fitts' lov. Vi vil førs
 \section*{Fitts' tre eksperimenter}
 Fitts var interesseret i at vise, at informationsteori kunne bruges til at beskrive det menneskelige motoriske system, og udførte derfor en række eksperimenter \cite{fitts1954}. Fitts udførte i alt tre eksperimenter - det første af dem dog med to forskellige pegeredskaber - hvilket gav anledning til data fra fire forskellige motoriske opgaver. Fitts arbejdede med de tre eksperimenter ud fra følgende hypotese, hvor $E$ kontrollerer den gennemsnitlige amplitude og varighed \cite{fitts1954} og $S$ er forsøgspersonen
 \begin{quotation}
-\textit{If the amplitude and tolerance limits of a task are controlled by E, and S is instructed to work at his maximum rate, then the average time per response will be directly proportional to the minimum average amount of information per response demanded by the particular conditions of amplitude and tolerance. \cite{fitts1954} side 263}
+\textit{If the amplitude and tolerance limits of a task are controlled by E, and S is instructed to work at his maximum rate, then the average time per response will be directly proportional to the minimum average amount of information per response demanded by the particular conditions of amplitude and tolerance. \cite{fitts1954}[s.263]}
 \end{quotation}
 Vi vil i denne sektion se nærmere på de tre eksperimenter og Fitts' konklusioner.
 
@@ -69,7 +69,7 @@ Fitts gjorde i dette eksperiment brug af et pegeredskab, og seks plader af samme
 
 De to centerplader kunne antage fire forskellige bredder, og de kunne placeres på fire måder - hver med en ny afstand imellem dem. Testpersonen skulle gentagne gange føre pegeredskabet fra den ene centerplade til den anden, med vægt på præcision frem for fart. De omkringliggende pladers formål, var at måle eventuelle fejl. Figur \ref{fig:FittsEx1} viser opstillingen hvor de to stiplede plader er centerpladerne.
 
-Testdeltagerne, 16 højrehåndede mandlige universitetsstuderende, fik 15 sekunder til hver af de 16 opgaver. Opgaverne blev udført i tilfældig rækkefølge, med en mellemliggende pause på 55 sekunder mellem hver af dem. Eksperimentet blev udført med to forskellige pegeredskaber - et lettere i vægt end det andet.
+Testdeltagerne, 16 højrehåndede mandlige universitetsstuderende, fik 15 sekunder til hver af de 16 opgaver. Opgaverne blev udført i tilfældig rækkefølge, med en pause på 55 sekunder mellem hver af opgaverne. Eksperimentet blev udført med to forskellige pegeredskaber - et lettere i vægt end det andet.
 
 \addcontentsline{toc}{subsection}{Eksperiment 2}
 \subsection*{Eksperiment 2: \textit{Disc Transfer}}
