--- a/latex/main.tex
+++ b/latex/main.tex
@@ -116,7 +116,7 @@ Ved brug af $ID$ udregnede Fitts et \textit{Index of Performance}, IP, som beskr
 IP &= \frac{ID}{t}\Leftrightarrow\\
 IP &= \frac{-1}{t}\log_2\left(\frac{W}{2A}\right)
 \end{align*}
-Denne formel er dog ikke den klassiske formel for Fitts lov, men ved omregninger kan den findes. Vi ser først på ID.
+Denne formel er dog ikke den klassiske formel for Fitts' lov, men ved omregninger kan den findes. Vi ser først på ID.
 \begin{align*}
 ID &= -\log_2\left(\frac{W}{2A}\right) \Leftrightarrow\\
 ID &= -\log_2\left(W\right)-\left(-\log_2\left(2A\right)\right) \Leftrightarrow\\
@@ -139,13 +139,13 @@ Når man regner med det menneskelige motoriske system, skal der medregnes den ti
 \label{eq:FittsLov}
 T = a + b \cdot log_2\left(\frac{2A}{W}\right)
 \end{equation}
-Dette er hvad der i dag kendes som Fitts lov.
+Dette er hvad der i dag kendes som Fitts' lov.
 
-Crossman og Goodeve \cite{crossman1983} forklarer Fitts lov som en overordnet bevægelse fra startpositionen imod målet, hvorefter der ved én eller flere underbevægelser korrigeres for den fejl, der blev foretaget ved den overordnede bevægelse. En illustration af bevægelsens hastighed over afstanden er vist i figur \ref{fig:CrossmanFitt} med en serie af tre delbevægelser, hvoraf den overordnede bevægelse begynder i startpositionen med afstand 0.
+Crossman og Goodeve \cite{crossman1983} forklarer Fitts' lov som en primær underbevægelse fra startpositionen imod målet, hvorefter der forekommer én eller flere korrigerende underbevægelser. En illustration af bevægelsens hastighed over afstand er vist i figur \ref{fig:CrossmanFitt} med en serie af tre underbevægelser, hvoraf den primære underbevægelse begynder i startpositionen med afstand nul.
 \begin{figure}[h]
 \centering
 \includegraphics[width=.5\linewidth]{images/illustrations/base_model_fitt}
-\caption{Illustration af hastighed over distance, der viser hoved- og underbevægelser brugt af Crossman og Goodeve til at forklare Fitt's lov \cite{meyer1988}}
+\caption{Illustration af hastighed over distance, der viser primær og korrigerende underbevægelser brugt af Crossman og Goodeve til at forklare Fitt's lov \cite{meyer1988}}
 \label{fig:CrossmanFitt}
 \end{figure}
 
