--- a/latex/main.tex
+++ b/latex/main.tex
@@ -152,7 +152,7 @@ Crossman og Goodeve \cite{crossman1983} forklarer Fitts' lov som en primær unde
 \newpage
 \addcontentsline{toc}{section}{Alternative formuleringer}
 \section*{Alternative formuleringer}
-Siden udgivelsen af Fitts’ artikel, har flere forskere forsøgt at finde en formel, der passer bedre på det motoriske system, end Fitts’ originale lov. Der har indenfor menneske-datamaskine interaktion været flere udgivelser, som mener at have fundet en mere præcis formel end Fitts’ lov, eller som kigger på andre former for eksperimenter. Vi vil i dette afsnit se nærmere på tre af sådanne formuleringer.
+Siden udgivelsen af Fitts’ artikel, har flere forskere forsøgt at finde en formel, der passer bedre på det motoriske system, end Fitts’ originale lov. Der har inden for menneske-datamaskine interaktion været flere udgivelser, som mener at have fundet en mere korrekt formulering af Fitts’ lov. Vi vil i dette afsnit se nærmere på tre af sådanne formuleringer.
 
 \addcontentsline{toc}{subsection}{Welfords formulering}
 \subsection*{Welfords formulering}
