--- a/latex/main.tex
+++ b/latex/main.tex
@@ -158,18 +158,18 @@ Siden udgivelsen af Fitts’ artikel, har flere forskere forsøgt at finde en fo
 \subsection*{Welfords formulering}
 
 I \cite{welford1968} beskriver Welford en række fundamentale forudsætninger for det menneskelige motoriske system. Her kiggede han blandt andet på Fitts' lov, og de data han indsamlede i sit første forsøg. Han mente at Fitts' lov i princippet gengav den indsamlede data præcist, men han så også tre utilfredsstillende egenskaber, hvilket fik ham til at foreslå følgende modifikationer:
-Welford argumenterede for, at der skulle undlades at multipliceres $A$ med $2$, da det på data fra Fitts' første forsøg, ville resultere i en negativ $a$-værdi. Derved bliver (\ref{eq:FittsLov}) til
+Welford argumenterede for, at $A$ ikke skulle multipliceres med $2$, da det på data fra Fitts' første forsøg, ville resultere i en negativ $a$-værdi. Derved bliver (\ref{eq:FittsLov}) til
 \begin{align}
 \label{eq:Crossman}
 T = a + b \cdot log\left(\frac{A}{W}\right)
 \end{align}
-som også tidligere var blevet udledt af Crossman \cite{crossman1957}. Hvis data fra Fitts' første forsøg indsættes i (\ref{eq:Crossman}), så vil $a$ ligge tæt på $0.05$. Dette passer med Crossman's eksperiment, hvor tiden man bruger, inden bevægelsen begynder, udregnes til at være cirka $0.05$ \cite{crossman1957}. Welford argumenterer for, at man derved helt kunne undlade $a$, da det beskriver tiden inden bevægelsen. I et lignende eksperiment \cite{welford1958} fandt man dog, at resultaterne generelt var mere troværdige, hvis $a$-leddet var medtaget.
+som også tidligere var blevet udledt af Crossman \cite{crossman1957}. Hvis data fra Fitts' første forsøg indsættes i (\ref{eq:Crossman}), så vil $a$ ligge tæt på $0.05$. Dette passer med Crossman's eksperiment, hvor tiden man bruger, inden bevægelsen begynder, udregnes til at være cirka $0.05$ \cite{crossman1957}. Welford argumenterer for, at man derved helt kunne undlade $a$, da det beskriver tiden inden bevægelsen. I et lignende eksperiment \cite{welford1958} fandt han dog, at resultaterne generelt var mere troværdige, hvis $a$-leddet var medtaget.
 
-Figur \ref{fig:WelfordGraf} viser data fra ét af Fitts' eksperimenter og den tilhørende affine kurve. Den affine kurves skæring med $y$-aksen rammer under nul, jvf. den negative $a$ værdi. På baggrund af de to første punkter, som ikke ligger på den affine linje, fandt Welford frem til, at følgende modifikationer til ligning \ref{eq:FittsLov} ville beskrive data punkterne bedre.
+Figur \ref{fig:WelfordGraf} viser data fra ét af Fitts' eksperimenter og den tilhørende affine kurve. Den affine kurves skæring med $y$-aksen rammer under nul, jævnfør den negative $a$ værdi. På baggrund af de to første punkter, som ikke ligger på den affine linje, fandt Welford frem til, at følgende modifikationer til (\ref{eq:FittsLov}) ville beskrive datapunkterne bedre.
 \begin{align}\label{eq:WelfordsLov}
 T = K \cdot log\left(\frac{A + \frac{1}{2}W}{W}\right) = K \cdot log\left(\frac{A}{W} + 0.5\right)
 \end{align}
-(\ref{eq:WelfordsLov}) er sidenhen blevet kendt som Welfords lov og har betydning for, hvordan tiden, $T$, opfattes. Tiden vil i Ligning \ref{eq:WelfordsLov} blive afhænging af en Weber Fraction \cite{welford1958}, da testpersonen skal skelne mellem længderne til målets fjerneste og næreste kant. Testpersonen skal altså udvælge en længde, $W$, ud fra den totale længde mellem startpunktet og målets fjerneste kant. Det er her vigtigt at notere, at Ligning \ref{eq:WelfordsLov} også opretholder den fordel, som Fitts hævdede der var ved at multiplicere $A$ med $2$. Dette ses ud fra det mest ekstreme tilfælde, hvor bevægelsens startpunkt er på målets kant, da $A = \frac{1}{2}W$ vil gælde, hvorved $T = K \cdot log\left(\frac{A + \frac{1}{2}W}{W}\right) = K \cdot log\left(\frac{W}{W}\right)$. Da $W > 0$ vil $log(W) > 0$.
+(\ref{eq:WelfordsLov}) er sidenhen blevet kendt som Welfords lov og har betydning for, hvordan tiden, $T$, opfattes. Tiden vil i (\ref{eq:WelfordsLov}) blive afhænging af en Weber Fraction \cite{welford1958}, da testpersonen skal skelne mellem længderne til målets fjerneste og næreste kant. Testpersonen skal altså udvælge en længde, $W$, ud fra den totale længde mellem startpunktet og målets fjerneste kant. Det er her vigtigt at notere, at (\ref{eq:WelfordsLov}) også opretholder den fordel, som Fitts hævdede der var ved at multiplicere $A$ med $2$. Dette ses ud fra det mest ekstreme tilfælde, hvor bevægelsens startpunkt er på målets kant, da $A = \frac{1}{2}W$ vil det gælde at $T = K \cdot log\left(\frac{A + \frac{1}{2}W}{W}\right) = K \cdot log\left(\frac{W}{W}\right)$. Da $W > 0$ vil $log(W) > 0$.
 
 Den sidste observation, der blev gjort, var at kurven i figur~\ref{fig:WelfordGraf} viser en tydelig udfladning ved lavere værdier af $x$. Welford noterede at det sandsynligvis var grundet en begrænsende faktor, som beskriver en minimumstid per bevægelse, hvor kort eller uhindret bevægelse end måtte være. Welford's egne undersøgelser har påvist at denne begrænsende faktor har betydning for, hvor meget af målet der rent faktisk bliver brugt. Når målene er brede og længden mellem dem kort, vil testpersonen kun bruge en sub-længde af målets fulde længde. Han overfører mere information end (\ref{eq:WelfordsLov}) ville beskrive, fordi den effektive W er kortere. Den kortere bredde kan i nogen omfang afspejles i en reduktion af fejl og, hvis reduktionen sker med behørigt hensyn, holder (\ref{eq:WelfordsLov}) stadig.
 
