--- a/latex/main.tex
+++ b/latex/main.tex
@@ -171,7 +171,7 @@ T = K \cdot log\left(\frac{A + \frac{1}{2}W}{W}\right) = K \cdot log\left(\frac{
 \end{align}
 (\ref{eq:WelfordsLov}) er sidenhen blevet kendt som Welfords lov og har betydning for, hvordan tiden, $T$, opfattes. Tiden vil i (\ref{eq:WelfordsLov}) blive afhænging af en Weber Fraction \cite{welford1958}, da testpersonen skal skelne mellem længderne til målets fjerneste og næreste kant. Testpersonen skal altså udvælge en længde, $W$, ud fra den totale længde mellem startpunktet og målets fjerneste kant. Det er her vigtigt at notere, at (\ref{eq:WelfordsLov}) også opretholder den fordel, som Fitts hævdede der var ved at multiplicere $A$ med $2$. Dette ses ud fra det mest ekstreme tilfælde, hvor bevægelsens startpunkt er på målets kant.
 
-I dette tilfælde vil $A = \frac{1}{2}W$ vil det gælde at $T = K \cdot log\left(\frac{A + \frac{1}{2}W}{W}\right) = K \cdot log\left(\frac{W}{W}\right)$. Da $\log\left(\frac{W}{W}\right)=\log(1) > 0 $ vil $ID$ være positivt.
+I dette tilfælde vil det gælde, at $A = \frac{1}{2}W$, hvorved $T = K \cdot log\left(\frac{A + \frac{1}{2}W}{W}\right) = K \cdot log\left(\frac{W}{W}\right)$. Da $\log\left(\frac{W}{W}\right)=\log(1) > 0 $ vil $ID$ være positivt.
 
 Den sidste observation, der blev gjort, var at kurven i figur~\ref{fig:WelfordGraf} viser en tydelig udfladning ved lavere værdier af $x$. Welford noterede at det sandsynligvis var grundet en begrænsende faktor, som beskriver en minimumstid per bevægelse, hvor kort eller uhindret bevægelse end måtte være. Welford's egne undersøgelser har påvist at denne begrænsende faktor har betydning for, hvor meget af målet der rent faktisk bliver brugt. Når målene er brede og længden mellem dem kort, vil testpersonen kun bruge en sub-længde af målets fulde længde. Han overfører mere information end (\ref{eq:WelfordsLov}) ville beskrive, fordi den effektive W er kortere. Den kortere bredde kan i nogen omfang afspejles i en reduktion af fejl og, hvis reduktionen sker med behørigt hensyn, holder (\ref{eq:WelfordsLov}) stadig.
 
